2008-04-5  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/chessview.py: Abort 3D render if widget_get_gl_context() returns None (Bug #512068)

2008-03-24  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/opengl: Handle GLError->GLerror, GLUError -> GLUerror objects being renamed
	  in PyOpenGL 3.0 (Bug #503238)

2008-03-11  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/opengl/opengl.py: Add board numbering to 3D mode (bug #392286)
	* src/lib/scene/opengl/opengl.py: Fix skip rotation bug when open facing black
        * src/lib/display.py: Fix board numbering hiding when changing 2D<->3D mode

2008-03-10  Jason Clinton  <me@jasonclinton.com>
 
	* src/lib/ai.py: Commit fix for blocker #517347. AI was considered
	losing after a resign occured.

2008-03-02  Robert Ancell  <robert.ancell@gmail.com>

	* src/glchess.in.in: Re-add pygtk.require() call (Bug #521154).

2008-03-02  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/chessview.py: Handle gtk.gtkgl.widget_get_gl_drawable() returning
	  None (bugs #488902 and #512068).
        * src/lib/ai.py: Made AI monitor process more resiliant to OSError exceptions (bug
          #517347).

2008-02-19  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/opengl/new_models.py: Use OpenGL vertex arrays to speed up initial
	  rendering time ~6x. Reduces startup time in 3D mode from 5s to 2s on my system.
	* src/lib/gtkui/chessview.py: Add translator comments (Bug #517320)
	* src/lib/gtkui/network.py: Remove unused translation strings (Bug #517320)

2008-02-16  Robert Ancell  <robert.ancell@gmail.com>

        * src/lib/chess/board.py: Fix castling regression (Bug #516459)
	* src/lib/config.py: Catch GError exceptions from GConf (Bug #489878)
	* src/lib/scene/cairo/__init__.py: Pixel align the board (Bug #443451)
	* src/lib/display.py: Fix wrong player moving when changing to 3D mode (Bug #516818)

2008-02-11  Robert Ancell  <robert.ancell@gmail.com>
