@@ -201,6 +201,12 @@
 </ai>
 
 <ai type="uci">
+  <name>Gambit Fruit</name>
+  <binary>gfruit</binary>
+  <!-- FIXME: Add some difficulty levels -->
+</ai>
+
+<ai type="uci">
   <name>Toga II</name>
   <binary>toga2</binary>
   <!-- FIXME: Add some difficulty levels -->
